generated/terraform/aws/prod-eks-account/eks-worker-node-communication.tf
# =============================================================================
# Auto-generated by Network Security Policy-as-Code
# Policy: eks-worker-node-communication
# Ticket: SNOW-54321
# Requestor: platform-engineering@company.com
# Scope: prod-eks-account
# =============================================================================

# Supporting Resources

data "aws_security_group" "eks_worker_nodes" {
  tags = {
    "kubernetes.io/cluster/prod-eks-01" = "owned"
  }
}


data "aws_security_group" "eks_worker_nodes" {
  tags = {
    "kubernetes.io/cluster/prod-eks-01" = "owned"
  }
}

# Policy Resources

resource "aws_security_group_rule" "eks_worker_node_communication_0_0" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  source_security_group_id = data.aws_security_group.eks_worker_nodes.id
  security_group_id = "TODO_DESTINATION_SG_ID"  # Configure based on scope
  
  description = "Allow EKS worker nodes to communicate with each other for kubelet and HTTPS traffic - SNOW-54321"
}


resource "aws_security_group_rule" "eks_worker_node_communication_1_0" {
  type              = "ingress"
  from_port         = 10250
  to_port           = 10250
  protocol          = "tcp"
  source_security_group_id = data.aws_security_group.eks_worker_nodes.id
  security_group_id = "TODO_DESTINATION_SG_ID"  # Configure based on scope
  
  description = "Allow EKS worker nodes to communicate with each other for kubelet and HTTPS traffic - SNOW-54321"
}
